# open-coroutine

./: .gitignore  Cargo.toml  TODO.md
.github/workflows/: ci.sh  ci.yml
core/src/: lib.rs  monitor.rs  scheduler.rs
core/src/co_pool/: mod.rs  task.rs
core/src/common/: constants.rs  mod.rs  timer.rs
core/src/coroutine/: korosensei.rs
core/src/net/: event_loop.rs  mod.rs
core/src/net/operator/linux/: mod.rs
core/src/net/operator/windows/: mod.rs  tests.rs
core/src/syscall/unix/: mod.rs  nanosleep.rs  poll.rs  recvmsg.rs  select.rs  sendmsg.rs
core/src/syscall/windows/: WSASend.rs  accept.rs  mod.rs
examples/examples/: socket_co.rs  socket_co_client.rs  socket_co_server.rs  socket_not_co.rs
examples/src/: lib.rs
hook/src/: lib.rs
hook/src/syscall/: unix.rs  windows.rs
open-coroutine/: Cargo.toml
open-coroutine-core/: Cargo.toml  build.rs
open-coroutine-core/examples/: preemptive.rs
open-coroutine-core/src/: blocker.rs  common.rs  constants.rs  lib.rs
open-coroutine-core/src/coroutine/: korosensei.rs  local.rs  mod.rs  suspender.rs
open-coroutine-core/src/coroutine/stack/: mod.rs  pooled.rs  unpooled.rs
open-coroutine-core/src/event_loop/: core.rs  join.rs
open-coroutine-core/src/monitor/: creator.rs  listener.rs  mod.rs
open-coroutine-core/src/net/: config.rs  core.rs  mod.rs  selector.rs
open-coroutine-core/src/net/event_loop/: core.rs  join.rs  mod.rs  tests.rs
open-coroutine-core/src/net/io_uring/: mod.rs  tests.rs
open-coroutine-core/src/net/operator/: mod.rs
open-coroutine-core/src/net/selector/: has.rs  mio.rs  mod.rs  polling.rs
open-coroutine-core/src/pool/: creator.rs  current.rs  has.rs  join.rs  mod.rs  task.rs  tests.rs
open-coroutine-core/src/scheduler/: current.rs  has.rs  join.rs  listener.rs  mod.rs  tests.rs
open-coroutine-core/src/syscall/: facade.rs  io_uring.rs  mod.rs  state.rs
open-coroutine-core/src/syscall/unix/: mod.rs
open-coroutine-core/src/syscall/windows/: Sleep.rs  mod.rs
open-coroutine-hooks/: Cargo.toml
open-coroutine-hooks/src/: coroutine.rs  lib.rs  task.rs
open-coroutine-hooks/src/unix/: common.rs  linux_like.rs  mod.rs  read.rs  sleep.rs  socket.rs  write.rs
open-coroutine-hooks/src/windows/: mod.rs
open-coroutine-iouring/src/: io_uring.rs  lib.rs  version.rs
open-coroutine-timer/: Cargo.toml
open-coroutine-timer/src/: lib.rs
open-coroutine/src/: lib.rs
open-coroutine/src/task/: join.rs  mod.rs
