[package]
name = "open-coroutine-core"
version = "0.5.0"
edition = "2021"
authors = ["zhangzicheng@apache.org"]
description = "The open-coroutine is a simple, efficient and generic coroutine library."
repository = "https://github.com/acl-dev/open-coroutine"
keywords = ["runtime", "coroutine", "hook", "preempt", "work-steal"]
categories = ["concurrency", "asynchronous", "os", "network-programming", "filesystem"]
license = "LGPL-3.0 OR Apache-2.0"
readme = "../README.md"

[dependencies]
dashmap = "5.5.1"
cfg-if = "1.0.0"
num_cpus = { version = "1.14.0", optional = true }
once_cell = { version = "1.18.0", optional = true }
crossbeam-utils = { version = "0.8.15", optional = true }
polling = { version = "2.8.0", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2.148"
nix = { version = "0.27.1", features = ["signal"] }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.6.1", optional = true }

[build-dependencies]
cfg-if = "1.0.0"

[target.'cfg(target_os = "linux")'.build-dependencies]
cc = "1.0.82"

[dev-dependencies]
backtrace = "0.3.67"

[target.'cfg(target_os = "linux")'.dev-dependencies]
anyhow = "1.0.75"
slab = "0.4.8"

[features]
default = ["full"]

# Provide net API abstraction and implementation.
net = ["num_cpus", "once_cell", "crossbeam-utils", "polling"]

# Provide io_uring abstraction and implementation.
# This feature only works in linux.
io_uring = ["net", "io-uring"]

# Enable all features.
full = ["io_uring"]
